Average and Credits bug fixed